2.35.2:

2012-03-21  Murray Cumming  <murrayc@murrayc.com>

	Fix a warning found by clang++

	* libxml++/parsers/textreader.h: PropertyReader is a class, not
	a struct.

2012-03-20  Murray Cumming  <murrayc@murrayc.com>

	Remove the --disable-api-exceptions configure option.

	And remove the #ifdefs and #else blocks from the code.
	This is not used by anybody now, as far as I know, so this makes the
	code easier to maintain.

2012-03-20  Murray Cumming  <murrayc@murrayc.com>

	A fix for the previous commit.

	* libxml++/nodes/node.cc: get_first_child() const: Use the name 
	parameter.

2012-03-19  Murray Cumming  <murrayc@murrayc.com>

	Node: Add get_first_child().

	* libxml++/nodes/node.[h|cc]: This is like get_children(),
	but it returns only the first node, optionally returning
	the first one with a certain name.
	Based on a patch by Ilya Murav'jov in bug #648125 .

2.35.1:

2012-02-15  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Handle attributes with default values correctly.

	* libxml++/attributedeclaration.[h|cc]:
	* libxml++/attributenode.[h|cc]: New files.
	* Makefile.am:
	* libxml++/Makefile.am: Add the new files.
	* libxml++/libxml++.h: Add the new .h files.
	* docs/manual/libxml++_without_code.xml: Add AttributeDeclaration and
	AttributeNode in the list of node classes.
	* libxml++/attribute.[h|cc]: Make get_value() useful also for default values
	(XML_ATTRIBUTE_DECL). Fix set_value() for attributes in a namespace.
	* libxml++/nodes/element.[h|cc]: get_attribute(): Add description. Don't use
	xmlHasProp(), it ignores namespace.
	* libxml++/nodes/node.cc: get_namespace_prefix(), get_namespace_uri(),
	set_namespace(), create_wrapper(): Add code for XML_ATTRIBUTE_DECL.
	* examples/dom_parser/example.dtd: Add attribute 'title' with default value.
	* examples/dom_parser/example.xml: Add attribute 'title' with explicit value.
	Bug #669635.

2012-02-15  Kjell Ahlstedt  <kjell.ahlstedt@bredband.net>

	Node: Correct mis-spelt LIBXMLCPP_EXCEPTIONS_ENABLED.
